# nshsnap

./: README.md  noxfile.py  pyproject.toml
scripts/: dump_files.py
src/nshsnap/: .nshconfig.generated.json  __init__.py  _config.py  _load.py  _meta.py  _pip_deps.py  _resolve_modules.py  _snapshot.py  _util.py  cli.py  run_cli.py
src/nshsnap/config/: __init__.py
src/nshsnap/config/_config/: __init__.py
src/nshsnap/config/_meta/: __init__.py
src/nshsnap/config/_pip_deps/: __init__.py
src/nshsnap/config/_snapshot/: __init__.py
src/nshsnap/config/cli/: __init__.py
src/nshsnap/configs/: __init__.py
src/nshsnap/configs/_config/: __init__.py
src/nshsnap/configs/_meta/: SnapshotConfig_typed_dict.py  SnapshotMetadata_typed_dict.py  __init__.py
src/nshsnap/configs/_pip_deps/: BasePackageDependency_typed_dict.py  EditablePackageDependency_typed_dict.py  RegularPackageDependency_typed_dict.py  __init__.py
src/nshsnap/configs/_snapshot/: SnapshotConfig_typed_dict.py  SnapshotMetadata_typed_dict.py  __init__.py
src/nshsnap/configs/cli/: SnapshotConfig_typed_dict.py  __init__.py
