[tool.poetry]
name = "nshsnap"
version = "0.2.0"
description = ""
authors = ["Nima Shoghi <nimashoghi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nshconfig = "*"
uuid7 = "*"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.373"
ruff = "^0.5.4"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"
rich = "^13.7.1"
gitignore-parser = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "standard"
deprecateTypingAliases = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportPrivateImportUsage = false

[tool.ruff.lint]
ignore = ["F722", "F821", "E731", "E741"]

[tool.poetry.extras]
extra = []

[tool.poetry.scripts]
nshsnap = "nshsnap.cli:main"
