[tool.poetry]
name = "nshsnap"
version = "0.6.0"
description = ""
authors = ["Nima Shoghi <nimashoghi@gmail.com>"]
readme = "README.md"

[tool.poetry.urls]
homepage = "https://github.com/nimashoghi/nshsnap"

[tool.poetry.dependencies]
python = "^3.10"
nshconfig = "*"
uuid7 = "*"

[tool.poetry.group.dev.dependencies]
pyright = "*"
ruff = "*"
ipykernel = "*"
ipywidgets = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "standard"
deprecateTypingAliases = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportPrivateImportUsage = false

[tool.ruff.lint]
select = ["FA102", "FA100"]
ignore = ["F722", "F821", "E731", "E741"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.poetry.extras]
extra = []

[tool.poetry.scripts]
nshsnap = "nshsnap.cli:main"
